# TradingTransformer

./: .coveragerc  .dockerignore  .gitignore  AMZN.csv  ARCHITECTURE.md  BX.csv  CMakeLists.txt  DECISIONS.md  Dockerfile.backtester  Dockerfile.python  EncoderLayer.py  FeedForward.py  KDP.csv  LEARN.md  Linear.py  MMM.csv  MNST.csv  NKE.csv  PDR.md  PFE.csv  PG.csv  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  README.md  RsiEmaStrategy.py  RsiPortfolioStrategy.py  StockDataPD.py  StrategyOptimiser.py  Trading_Simulator.py  Train.py  backtest  backtest_config.yaml  docker-compose.yml  main.cpp  requirements.txt  run_pipeline.py
.github/workflows/: build.yml  codeql.yml  python-app.yml
Backtesting/: PLD.csv
Backtesting/HighGrowth/: DFS.csv  LMT.csv  UNH.csv
Backtesting/Volatile/: CRWD.csv  NVDA.csv
BacktestingData/: VLO.csv  XOM.csv
BacktestingData/HighGrowth/: ASML.csv  PEP.csv  T.csv
BacktestingData/Volatile/: META.csv  NFLX.csv  SNOW.csv  TSLA.csv
Data/: AAPL.csv  ABBV.csv  ADBE.csv  AMD.csv  AMGN.csv  AMZN.csv  AVGO.csv  AXP.csv  BAC.csv  BIIB.csv  BLK.csv  BMY.csv  C.csv  CRM.csv  CVS.csv  CVX.csv  DIS.csv  GE.csv  GILD.csv  GOOGL.csv  GS.csv  HD.csv  HON.csv  HOOD.csv  INTC.csv  JNJ.csv  JPM.csv  LLY.csv  LOW.csv  MA.csv  MCD.csv  META.csv  MMM.csv  MNST.csv  MRK.csv  MS.csv  MSFT.csv  NKE.csv  NOW.csv  ORCL.csv  (+19 more)
Results/MACDStrat/Results1/: strategy_results1.csv
Results/Results1/: experiment_results.csv
Results/Results2/: strategy_results1.csv
Results/Results3/: strategy_results1.csv
Results/Results4/: strategy_results1.csv
Results/Results5/: strategy_results1.csv
Results/Results6/: strategy_results1.csv
Strategies/: MACDMomentumTrend.py  MeanReversion.py  PairsTradingETFs.py  RsiEmaStrategy.py  VWAPBreakout.py
Transformer/: Attention.py  DataFrame.py  DataProcessed.py  EncodingnDecoding.py  InputEmbedding.py  Interface.py  LayerNorm.py  Mask.py  Model.py  MultiHeadAttention.py  PositionalEncoding.py  Tools.py  TrainTransformer.py  Transformer.py
backtester/: CMakeLists.txt  CTestTestfile.cmake  backtest  backtester_tests  backtester_tests[1]_include.cmake  backtester_tests[1]_tests.cmake  cmake_test_discovery_a96fc5bc8a.json  main.cpp  ml_backtest  ml_main.cpp
backtester/data/: AAPL.csv  AAPL_features.csv
backtester/include/config/: BacktestConfig.hpp
backtester/include/engine/: BacktestEngine.hpp
backtester/include/events/: EventQueue.hpp  Events.hpp  FeatureMarketEvent.hpp  FillEvent.hpp  MarketEvent.hpp  OrderEvent.hpp  SignalEvent.hpp
backtester/include/execution/: SimulatedExecution.hpp
backtester/include/market/: CSVDataHandler.hpp  DataHandler.hpp  FeatureCSVDataHandler.hpp  MultiAssetDataHandler.hpp
backtester/include/portfolio/: PerformanceMetrics.hpp  Portfolio.hpp  RiskManager.hpp
backtester/include/strategy/: MLStrategy.hpp  MovingAverageStrategy.hpp  ScalerParams.hpp  Strategy.hpp
backtester/src/engine/: BacktestEngine.cpp
backtester/src/execution/: SimulatedExecution.cpp
backtester/src/market/: CSVDataHandler.cpp  CSVDataHandler.hpp  FeatureCSVDataHandler.cpp  MultiAssetDataHandler.cpp
backtester/src/portfolio/: Portfolio.cpp  RiskManager.cpp
backtester/src/strategy/: MLStrategy.cpp  MovingAverageStrategy.cpp
backtester/tests/: test_data_handler.cpp  test_engine.cpp  test_execution.cpp  test_metrics.cpp  test_portfolio.cpp
checkpoints/: featureScaler.pkl  targetScaler.pkl
docker/: entrypoint.sh
models/: featureScaler.pkl  feature_scaler.csv  targetScaler.pkl  target_scaler.csv
output/: ml_equity.csv  ml_trades.csv
research/: exportModel.py
research/analysis/: EquityCurve.py  equity.csv  trades.csv
research/features/: pipeline.py  technicalIndicators.py
research/models/: transformerModel.py
research/signals/: transformerAplha
research/training/: Train.py  sweep.py
research/transformer/: Attention.py  DataFrame.py  DataProcessed.py  Embedding.py  EncodingnDecoding.py  Interface.py  Model.py  Tools.py
research/validation/: walk_forward.py  wf_report.py
scripts/: convert_scalers.py
tests/: conftest.py  test_dataset.py  test_indicators.py  test_mask.py  test_metrics.py  test_metrics_module.py  test_tools.py  test_training_reproducibility.py  test_transformer.py  test_walk_forward.py
(+3 files in other folders)
