cmake_minimum_required(VERSION 3.15)
project(backtester)

set(CMAKE_CXX_STANDARD 17)

include_directories(include)

file(GLOB_RECURSE SOURCES "src/*.cpp")

# ---------------------------------------------------------------------------
# Production binary (no LibTorch required)
# ---------------------------------------------------------------------------
add_executable(backtest main.cpp ${SOURCES})

# ---------------------------------------------------------------------------
# Tests — Google Test fetched at configure time, no manual install required.
# ---------------------------------------------------------------------------
include(FetchContent)

FetchContent_Declare(
    googletest
    URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
    DOWNLOAD_EXTRACT_TIMESTAMP TRUE
)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

file(GLOB TEST_SOURCES "tests/*.cpp")

# Test binary: same src/*.cpp (no main.cpp) + GTest's main().
# MLStrategy.cpp is included but ML_STRATEGY_ENABLED is NOT defined here,
# so all LibTorch code is compiled out — tests run without LibTorch.
add_executable(backtester_tests ${TEST_SOURCES} ${SOURCES})
target_include_directories(backtester_tests PRIVATE include)
target_link_libraries(backtester_tests GTest::gtest_main)

include(GoogleTest)
gtest_discover_tests(backtester_tests)

# ---------------------------------------------------------------------------
# ML backtest binary — requires LibTorch (optional).
#
# To enable:
#   cmake -DCMAKE_PREFIX_PATH=/path/to/libtorch ..
#
# Download LibTorch (CPU or CUDA):
#   https://pytorch.org/get-started/locally/
#   Choose: Stable | Your OS | LibTorch | C++ / Java | CPU
# ---------------------------------------------------------------------------
find_package(Torch QUIET)

if(Torch_FOUND)
    message(STATUS "LibTorch ${Torch_VERSION} found — building ml_backtest")

    add_executable(ml_backtest ml_main.cpp ${SOURCES})
    target_compile_definitions(ml_backtest PRIVATE ML_STRATEGY_ENABLED)
    target_include_directories(ml_backtest PRIVATE include)
    target_link_libraries(ml_backtest ${TORCH_LIBRARIES})

    # Ensure C++17 ABI matches what LibTorch was built with
    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
        target_compile_options(ml_backtest PRIVATE -D_GLIBCXX_USE_CXX11_ABI=0)
    endif()

    # Copy LibTorch DLLs into the output directory on Windows
    if(MSVC)
        file(GLOB TORCH_DLLS "${TORCH_INSTALL_PREFIX}/lib/*.dll")
        add_custom_command(TARGET ml_backtest POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            ${TORCH_DLLS} $<TARGET_FILE_DIR:ml_backtest>)
    endif()
else()
    message(STATUS "LibTorch not found — ml_backtest target skipped")
    message(STATUS "  To enable: cmake -DCMAKE_PREFIX_PATH=/path/to/libtorch ..")
    message(STATUS "  Download:  https://pytorch.org/get-started/locally/")
endif()
